Custom CSS in proper spot + Almost done designing
So I've designed on a design for the videos. I just need to grab all the links and images to add to the static page and this will be done.

--- a/assets/css/global-custom.css
+++ b/assets/css/global-custom.css
@@ -58,3 +58,10 @@
 }
 
 /*end added by jaye*/
+/* added by CNIAngel */
+
+.video-thumbnail {
+    max-width: 300px;
+    max-height: 225px;
+}
+/* end added by CNIAngel */
